fix: fixed body overflow for desktop viewports

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ body {
   }
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 1023px) {
   body:has(.modal) {
     overflow: hidden;
   }
